# curly-tribble

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  TODO.md  commit_msg.txt  llms.txt  panic_log.txt  Меры поддержки на 05.05.2022.docx  Презентация ФПП РТ(1).pptx
.github/workflows/: ci.yml
.superpowers/brainstorm/gen-ui/: index.html
docs/superpowers/: ARCHITECTURE_GUARDS.md
docs/superpowers/adr/: 0000-template.md  0001-absolute-zenith-architecture.md  0002-zenith-navigator.md  (+6 more)
src/: camera.rs  economy.rs  events.rs  game_state.rs  lib.rs  main.rs  sets.rs  ui.rs
src/economy/: assets.rs  global.rs  mesh_gen.rs  mod.rs
src/map/: artifacts.rs  atmosphere.rs  camps.rs  construction.rs  data.rs  deposits.rs  factions.rs  hex_math.rs  mod.rs  navigation.rs  phase_transitions.rs  poi.rs  resources.rs  river_gen.rs  systems.rs  terrain_gen.rs  treasures.rs  validation.rs  validation_deposits.rs  visibility.rs  zoning.rs
src/pawn/: behaviors.rs  brain.rs  mod.rs  needs.rs  relations.rs
src/ui/: details.rs  logs.rs  mod.rs  resources.rs
tests/: architecture.rs  map_scaling_test.rs  mud_banks_test.rs  mud_smoothing_test.rs  navigation_tests.rs  pawn_behavior_tests.rs  phase_transitions_test.rs  river_carving_test.rs  river_gen_test.rs  slope_logic_test.rs  terrain_config_test.rs  terrain_gen_test.rs  treasure_linking_test.rs
tests/architecture_mod/: behavior_guards.rs  decoupling.rs  dependency.rs  ecs_guards.rs  encapsulation.rs  graph_guards.rs  linting.rs  main_guards.rs  metadata.rs  mod.rs  performance.rs  plugins.rs  stability.rs  type_safety.rs  utils.rs
(+75 files in other folders)
