[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_ai_remote = { git = "https://github.com/cats2333/bevy_ai_editor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
