[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_ai_remote = { git = "https://github.com/cats2333/bevy_ai_editor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[lints.clippy]
# Устанавливаем приоритет -1 для групп, чтобы индивидуальные allow могли их перекрывать
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Исключения для Bevy (индивидуальные линты имеют приоритет 0 по умолчанию)
too_many_arguments = "allow"
type_complexity = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
# Игнорируем приоритеты самих групп
lint_groups_priority = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
